fixing a small layout issue

--- a/public/stylesheets/css.css
+++ b/public/stylesheets/css.css
@@ -94,7 +94,7 @@ div#login ul li {
 
 div#login ul li#vimeo { margin-right: 0; }
 div#login ul li a {
-	padding:15px 0 9px 30px;
+	padding:15px 0 7px 30px;
 }
 div#login ul li a:hover { background-position: 0 -25px !important;}
 
